@@ -1,3 +1,8 @@
+2021-01-19  Morten Welinder  <terra@gnome.org>
+
+	* src/mstyle.c (gnm_style_linked_sheet_changed): Make sure to tell
+	the GnmStyleConditions what is going on.  Fixes #547, item 3.
+
 2020-12-19  Morten Welinder  <terra@gnome.org>
 
 	* src/sheet.c (sheet_range_unrender): New function.
